Endpoint updates
